fixed text alignment for rows

--- a/sass/modules/_tables.sass
+++ b/sass/modules/_tables.sass
@@ -34,7 +34,7 @@ table
             border: none
         td
             padding: 4px 8px
-            text-align: center
+            text-align: left
             border-bottom: 1px solid #e0e0e0
 
         td:first-child
